@@ -14,7 +14,6 @@
 // or as alternative newer Variant
 //
 plugins {
-    // id("com.github.ben-manes.versions") version("$version_gradleVersionsPlugin")
     id("java-library")
     id("maven-publish")
     id("ivy-publish")
@@ -46,19 +45,6 @@ clean {
 }
 
 // project.layout.buildDirectory = "target"
-//
-// apply from: "../dependencies.gradle"
-// apply from: "../dependencies.properties"
-//
-// Properties properties = new Properties()
-//
-// try (InputStream input = new FileInputStream(file("../gradle.properties"))) {
-//     properties.load(input)
-// }
-//
-// for (String key : properties.stringPropertyNames()) {
-//     ext.set(key, properties.getProperty(key))
-// }
 
 // repositories {
 //     mavenLocal()
@@ -80,10 +66,6 @@ dependencyManagement {
         // Empty
     }
 }
-
-// def versions = [:]
-// versions["checkstyle"] = "10.21.0"
-// ext.set("versions", versions)
 
 // configurations {
 //     // testImplementation {
@@ -107,38 +89,6 @@ dependencyManagement {
 //
 //             // Cache for Snapshots Versions.
 //             // cacheChangingModulesFor(24, "hours")
-//         }
-//     }
-// }
-
-// ant.lifecycleLogLevel = "INFO"
-//
-//// Register ANT-Tasks as Gradle-Tasks with Prefix "ant-" in Group "other".
-// ant.importBuild("ant_build.xml") { antTargetName -> "ant-" + antTargetName }
-// ant.properties["version"] = project.version
-//
-//// Set group property for all Ant tasks.
-// tasks.matching { task -> task.name.startsWith("ant-") }.configureEach{ group = "ant" }
-//
-// "ant-target" {
-//     ant.properties["version"] = version
-// }
-
-//// Dynamic Tasks
-// def apps = ["App1", "App2"]
-// def appProperties = [:]
-// appProperties["valueApp1"] = "app1-value"
-// appProperties["valueApp2"] = "app2-value"
-//
-// apps.each { app ->
-//     tasks.register("taskFor${app}") {
-//         group = "MyTasks"
-//         description = "some generic task"
-//
-//         var value = "${appProperties."value$app"}"
-//
-//         doLast {
-//             logger.lifecycle("app value: {}", value)
 //         }
 //     }
 // }
@@ -172,12 +122,6 @@ dependencies {
     // testImplementation("io.netty:netty-buffer")
     testImplementation("org.junit.jupiter:junit-jupiter")
     testRuntimeOnly("org.junit.platform:junit-platform-launcher")
-
-    // modules {
-    //     module('org.springframework.boot:spring-boot-starter-logging') {
-    //         replacedBy("org.springframework.boot:spring-boot-starter-log4j2", "Use Log4j2 instead of Logback")
-    //     }
-    // }
 
     // api("org.apache.commons:commons-lang3:3.18.0")
 }
@@ -289,18 +233,23 @@ tasks.withType(Test).configureEach {
         // exceptionFormat = TestExceptionFormat.FULL
     }
 
-    // afterSuite { desc, result ->
-    //     if (!desc.parent) {
-    //         String output = "Results: ${result.resultType} - ${result.testCount} Tests - ${result.successfulTestCount} SUCCESSFUL, ${result.failedTestCount} FAILED, ${result.skippedTestCount} SKIPPED"
-    //
-    //         String lines = "-".repeat(output.length())
-    //         // String lines = Stream.generate(() -> "-").limit(output.length()).collect(Collectors.joining());
-    //
-    //         logger.lifecycle(lines)
-    //         logger.lifecycle(output)
-    //         logger.lifecycle(lines)
-    //     }
-    // }
+    addTestListener(new TestListener() {
+        void afterSuite(TestDescriptor suite, TestResult result) {
+            // No Parent = all Tests finished.
+            if (suite.parent != null) {
+                return
+            }
+
+            String output = "Results: ${result.resultType} - ${result.testCount} Tests - ${result.successfulTestCount} SUCCESSFUL, ${result.failedTestCount} FAILED, ${result.skippedTestCount} SKIPPED"
+
+            String lines = "-".repeat(output.length())
+            // String lines = Stream.generate(() -> "-").limit(output.length()).collect(Collectors.joining());
+
+            println(lines)
+            println(output)
+            println(lines)
+        }
+    })
 
     // finalizedBy("jacocoTestReport")
 }
@@ -773,48 +722,6 @@ sonarLint {
     // ignoredPaths.add("**/demo/FailsafeDemo.java")
 }
 
-// DefaultModuleComponentIdentifier
-// def removeIf = { ModuleComponentIdentifier coordinate ->
-//     // if ("org.owasp.dependencycheck".equals(coordinate.getGroup())) {
-//     //     // Since 9.x an NVD API Key is required for full performance by direct web access.
-//     //     if (!coordinate.getVersion().startsWith("8")) {
-//     //         logger.lifecycle("ignored: {}", coordinate)
-//     //         return true
-//     //     }
-//     // }
-//
-//     def stableKeyword = ["RELEASE", "FINAL", "GA"].any { it -> coordinate.getVersion().toUpperCase().contains(it) }
-//     def regex = /^[0-9,.v-]+(-r)?$/
-//
-//     return !stableKeyword && !(coordinate.getVersion() ==~ regex)
-// }
-// tasks.named("dependencyUpdates").configure {
-//     checkForGradleUpdate = false
-//
-//     rejectVersionIf {
-//         removeIf(it.candidate)
-//     }
-//
-//     outputFormatter = { result ->
-//         def updatable = result.outdated.dependencies
-//
-//         if (updatable.isEmpty()) {
-//             logger.lifecycle("No updates available.")
-//
-//             return
-//         }
-//
-//         logger.lifecycle("There are new updates:")
-//
-//         updatable.each { dependency ->
-//             var newVersion = java.util.Optional.ofNullable(dependency.available.release)
-//                     .or(() -> java.util.Optional.ofNullable(dependency.available.milestone))
-//                     .or(() -> java.util.Optional.ofNullable(dependency.available.integration))
-//                     .orElse("???")
-//             logger.lifecycle("{}:{}:{} -> {}", dependency.group, dependency.name, dependency.version, newVersion)
-//         }
-//     }
-// }
 
 // For Composite Build.
 tasks.register("cleanAll", GradleBuild) {
@@ -837,64 +744,5 @@ tasks.register("buildAll", GradleBuild) {
 //     jvmArgs = ["--enable-native-access=ALL-UNNAMED"]
 // }
 
-// gradle exec --args=["-Dspring.profiles.active=file"]
-// gradle exec -Dspring.profiles.active=file
-// tasks.register("exec", JavaExec) {
-//     group = "MyTasks"
-//     description = "Run the main class with JavaExecTask"
-//
-//     // classpath = files(...)
-//     // classpath = configurations.runtimeClasspath // Doesn't contain Main-Class !
-//     classpath = sourceSets.main.runtimeClasspath
-//     mainClass = project.main
-//
-//     // args("-Dspring.profiles.active=file")
-//     // environment("spring.profiles.active", "file")
-//
-//     // executable = ".../java.exe"
-//     // workingDir = workDir
-//     // args = ["...","..."]
-//     jvmArgs("--enable-native-access=ALL-UNNAMED")
-//     // debugOptions {
-//     //     enabled = true
-//     //     port = 5566
-//     //     server = true
-//     //     suspend = false
-//     // }
-// }
 
-// tasks.register("reuseExecTask", JavaExec) {
-//     JavaExec exec = tasks.named("exec", JavaExec).get()
-//
-//     group = exec.getGroup()
-//     description = exec.getDescription() + " with other Parameter"
-//
-//     classpath = exec.getClasspath()
-//     executable = exec.getExecutable()
-//     mainClass = exec.getMainClass().get()
-//
-//     jvmArgs(exec.getJvmArgs())
-//
-//     // No Exception if Property not found but with default, CI friendly.
-//     args = ["-user", "USER", "-password", findProperty("user_psw") ?: "null"]
-//     //args = ["-user", "USER", "-password", providers.gradleProperty("user_psw").orElse("null").get()] // Best Practice.
-//
-//     // Exception if Property not found.
-//     //args = ["-user", "USER", "-password", getProperty("user_psw")]
-// }
 
-// Start: gradle bootRun --args="--spring.profiles.active=file"
-// The archive name. If the name has not been explicitly set, the pattern for the name is:
-// [archiveBaseName]-[archiveAppendix]-[archiveVersion]-[archiveClassifier].[archiveExtension]
-// archiveFileName = "my-boot.jar"
-// springBoot {
-//     mainClass = project.main
-// }
-
-// gradle bootRun --args="--spring.profiles.active=file --server.port=65111"
-// bootRun {
-//     args = [
-//             "--enable-native-access=ALL-UNNAMED"
-//     ]
-//     jvmArgs = ["--enable-native-access=ALL-UNNAMED"]
-// }
